# LogLady

./: .gitignore  CMakeLists.txt  README.md
cmake/: cxx_standart_11.cmake  cxx_standart_14.cmake  cxx_standart_17.cmake
src/: levels.h  levels.hpp  logger.cpp
src/config/: threading.h  threading.hpp
src/formatter/: config_formatter.cpp  config_formatter.hpp  datetime_wrapper.cpp  datetime_wrapper.hpp  formats.hpp  formatter.cpp  formatter.hpp  formatter_wrapper.cpp  formatter_wrapper.hpp  level_wrapper.cpp  level_wrapper.hpp
src/sink/: config_registry.hpp  console_sink.hpp  registry.hpp  sink.hpp
test/try_compile/: cxx_11.cmake  cxx_11.cpp  cxx_14.cmake  cxx_17.cmake  cxx_17.cpp
